// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header 컴포넌트 > 스냅샷 테스트 - 핵심 요소별 > all variant - 버튼 그룹 스냅샷 > all-variant-left-section 1`] = `
<div
  class="flex-1 flex justify-start"
>
  <button
    class="flex items-center justify-center w-fit cursor-pointer bg-transparent text-gray-900 text-md rounded-xl px-5 py-3 undefined "
    type="button"
  >
    <svg
      class="size-6"
      fill="none"
      height="28"
      stroke="black"
      stroke-width="3"
      viewBox="0 0 24 24"
      width="28"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 4 L8 12 L16 20"
      />
    </svg>
  </button>
</div>
`;

exports[`Header 컴포넌트 > 스냅샷 테스트 - 핵심 요소별 > all variant - 버튼 그룹 스냅샷 > all-variant-right-section 1`] = `
<div
  class="flex-1 flex justify-end"
>
  <div
    class="flex-1 flex justify-end items-center "
  >
    <button
      class="flex items-center justify-center w-fit cursor-pointer bg-transparent text-gray-900 text-md rounded-xl px-5 py-3 h-6 w-6 !p-0 rounded-lg flex items-center justify-center "
      type="button"
    >
      <svg
        class="size-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.99999 10L12 3L20 10L20 20H15V16C15 15.2044 14.6839 14.4413 14.1213 13.8787C13.5587 13.3161 12.7956 13 12 13C11.2043 13 10.4413 13.3161 9.87868 13.8787C9.31607 14.4413 9 15.2043 9 16V20H4L3.99999 10Z"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
    <button
      class="flex items-center justify-center w-fit cursor-pointer bg-transparent text-gray-900 text-md rounded-xl px-5 py-3 h-6 w-6 !p-0 rounded-lg flex items-center justify-center mr-5 "
      type="button"
    >
      <svg
        class="size-6"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 21C5 17.134 8.13401 14 12 14C15.866 14 19 17.134 19 21M16 7C16 9.20914 14.2091 11 12 11C9.79086 11 8 9.20914 8 7C8 4.79086 9.79086 3 12 3C14.2091 3 16 4.79086 16 7Z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Header 컴포넌트 > 스냅샷 테스트 - 핵심 요소별 > logo variant - 로고 영역 스냅샷 > logo-svg 1`] = `null`;

exports[`Header 컴포넌트 > 스냅샷 테스트 - 핵심 요소별 > page variant - 네비게이션 구조 스냅샷 > page-variant-back-button 1`] = `
<button
  class="flex items-center justify-center w-fit cursor-pointer bg-transparent text-gray-900 text-md rounded-xl px-5 py-3 undefined "
  type="button"
>
  <svg
    class="size-6"
    fill="none"
    height="28"
    stroke="black"
    stroke-width="3"
    viewBox="0 0 24 24"
    width="28"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 4 L8 12 L16 20"
    />
  </svg>
</button>
`;

exports[`Header 컴포넌트 > 스냅샷 테스트 - 핵심 요소별 > page variant - 네비게이션 구조 스냅샷 > page-variant-title 1`] = `
<h1
  class="text-md font-bold text-center"
>
  테스트 페이지
</h1>
`;
